--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -55,8 +55,8 @@
    <widget class="QPushButton" name="pbA">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>10</y>
+      <x>110</x>
+      <y>110</y>
       <width>31</width>
       <height>22</height>
      </rect>
@@ -71,10 +71,10 @@
    <widget class="QPushButton" name="pbB">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>10</y>
-      <width>31</width>
-      <height>22</height>
+      <x>110</x>
+      <y>150</y>
+      <width>30</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -87,11 +87,14 @@
    <widget class="QLCDNumber" name="lcdC">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>220</x>
       <y>10</y>
       <width>41</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="digitCount">
      <number>1</number>
@@ -112,14 +115,84 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>10</y>
+      <x>270</x>
+      <y>130</y>
       <width>20</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>C</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ledC">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>130</y>
+      <width>20</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets.qrc">:/assets/leds/assets/leds/white.svg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>110</y>
+      <width>91</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets.qrc">:/gates/assets/gates/AND.svg</pixmap>
+    </property>
+   </widget>
+   <widget class="QLabel" name="clk">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>10</y>
+      <width>10</width>
+      <height>10</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets.qrc">:/assets/leds/assets/leds/green_off.svg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>10</y>
+      <width>30</width>
+      <height>10</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>clk</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -147,6 +220,8 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="assets.qrc"/>
+ </resources>
  <connections/>
 </ui>
